[#39965115] Fix alignment of icon in search results.

--- a/app/assets/stylesheets/search_results/_search_result_list.scss
+++ b/app/assets/stylesheets/search_results/_search_result_list.scss
@@ -46,6 +46,7 @@
             padding-top: 6px;
             max-width: $icon-image-width;
             max-height: $icon-image-height;
+            float: left;
         }
 
         .image {
